Added some fixes for some modules

--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -42,7 +42,7 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
 										<td class="column">
-											<h1>Engage &commat; <br> Lazard</h1>
+											<h1>Engage @ <br> Lazard</h1>
 											<br>
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
@@ -130,21 +130,21 @@
 					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module sapphire dark">
 						<tr>
 							<td class="frame"></td>
-							<td class="content h-flush">
-								<table style="width: 100%;" cellpadding="8px" role="presentation">
-									<tr class="layout_mobile-one-column">
-										<!--[if mso]>
-										<td style align="right" class="column">
-										<![endif]-->
-										<!--[if !mso]><!-->
-										<td style class="column align-right-md">
-										<!--<![endif]-->
-											<img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_GIFL.png" alt="Strategy thumbnail">
+							<td class="content">
+								<table style cellpadding="8px" class="w-100" align role="presentation">
+									<tr class="layout_two-column layout_mobile-one-column" align="center">
+										<td style="width: 194px;" class="column align-right-md">
+											<!-- <img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_GIFL.png" alt="Strategy thumbnail" width="194" class="d-block"> -->
+											<img src="https://placehold.co/194x194" alt="Strategy thumbnail" width="194px" height="194px" class="d-block">
 										</td>
-										<td style="vertical-align: middle;" class="column">
-											<p style="width: 195px;" class="paragraph-3">
+										<td style="vertical-align: middle; width: 194px;" class="column" align="left">
+											<p class="paragraph-3">
 												Investors can now access Lazard's flagship Global Listed Infrastructure Fund as an exchange traded fund (ETF), using the ticker 'GIFL'. <br>
-												Explore the Lazard Global Listed <br>
+											</p>
+											<p>
+												Explore the Lazard Global Listed
+											</p>
+											<p>
 												Infrastructure Active ETF page today
 											</p>
 											<br>
@@ -173,7 +173,8 @@
 								<table style cellpadding="8px" class="w-100" role="presentation">
 									<tr class="layout_two-column">
 										<td class="column">
-											<img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0">
+											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block"> -->
+											<img style src="https://placehold.co/264x148" alt="First Column Feature image" width="263" border="0" class="d-block">
 											<p></p>
 											<br>
 											
@@ -181,12 +182,13 @@
 											<br>
 											<h3 class="subheadline">Tuesday, October 31, 1:00PM eT</h3>
 											<br>
-											<p style="width: 193px;" class="d-block paragraph-2">Aaron Binsted, Portfolio Manager / Analyst on the Australian Equity team, joins Livewire Markets' The Pitch to discuss Australia's big banks and three potential opportunities</p>
+											<p style="width: 193px;" class="d-block paragraph-2">Aaron Binsted, Portfolio Manager / Analyst on the Australian Equity team, joins Livewire Markets' The Pitch to discuss Australia's big banks and three potential opportunities.</p>
 											<br>
 			
 											<h3 class="subheadline">Australia</h3>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<br>
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -217,40 +219,9 @@
 											<br>
 			
 											<h3 class="subheadline">Australia</h3>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
-													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
-														<!--[if mso]>
-														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
-															<v:fill type="solid" color="#00539A"/>
-															<v:textbox inset="3px,3px,0,0" style="text-align:center;">
-																<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/open_in_new_w.png" width="16" height="16" alt="Open in new Icon" style="display: block; padding: 6px;" />
-															</v:textbox>
-														</v:oval>
-														<![endif]-->
-						
-														<!-- Fallback for non-Outlook clients -->
-														<!--[if !mso]><!-->
-														<div class="d-block btn-icon">
-															<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/open_in_new_w.png" alt="open in new window button icon" class width="16px" height="16px" class="d-block">
-														</div>
-														<!--<![endif]-->
-													</td>
-													<td>
-														<a href="#" class="link-2">Select Australian Equity</a>
-													</td>
-												</tr>
-												<tr style="vertical-align: middle;">
-													<td>
-														<p class="disclaimer">APIR LAZ0022AU</p>
-													</td>
-												</tr>
-											</table>											
 											<br>
-			
-											<h3 class="subheadline">Australia</h3>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -277,13 +248,47 @@
 														<p class="disclaimer">APIR LAZ0022AU</p>
 													</td>
 												</tr>
-											</table>											
+											</table>
+											<br>
+			
+											<h3 class="subheadline">Australia</h3>
+											<br>
+											<table role="presentation" class="btn open-in-new">
+												<tr>
+													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
+														<!--[if mso]>
+														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
+															<v:fill type="solid" color="#00539A"/>
+															<v:textbox inset="3px,3px,0,0" style="text-align:center;">
+																<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/open_in_new_w.png" width="16" height="16" alt="Open in new Icon" style="display: block; padding: 6px;" />
+															</v:textbox>
+														</v:oval>
+														<![endif]-->
+						
+														<!-- Fallback for non-Outlook clients -->
+														<!--[if !mso]><!-->
+														<div class="d-block btn-icon">
+															<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/open_in_new_w.png" alt="open in new window button icon" class width="16px" height="16px">
+														</div>
+														<!--<![endif]-->
+													</td>
+													<td>
+														<a href="#" class="link-2">Select Australian Equity</a>
+													</td>
+												</tr>
+												<tr style="vertical-align: middle;">
+													<td>
+														<p class="disclaimer">APIR LAZ0022AU</p>
+													</td>
+												</tr>
+											</table>
 											<br>
 			
 											<a href="https://lazard.com" class="btn text ">Read more <span>&#8594;</span></a>
 										</td>
 										<td class="column">
-											<img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="263" border="0" class="d-block">
+											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="263" border="0" class="d-block"> -->
+											<img style src="https://placehold.co/264x148" alt="Second Column Feature image" width="263" border="0" class="d-block">
 											<p></p>
 											<br>
 											<h4>Fund in Focus with Warryn Robertson</h4>
@@ -294,8 +299,9 @@
 											<br>
 			
 											<h3 class="subheadline">Australia</h3>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<br>
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -322,12 +328,13 @@
 														<p class="disclaimer">APIR LAZ0022AU</p>
 													</td>
 												</tr>
-											</table>										
+											</table>
 											<br>
 			
 											<h3 class="subheadline">Australia</h3>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<br>
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -354,12 +361,13 @@
 														<p class="disclaimer">APIR LAZ0022AU</p>
 													</td>
 												</tr>
-											</table>										
+											</table>
 											<br>
 			
 											<h3 class="subheadline">Australia</h3>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<br>
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -386,7 +394,7 @@
 														<p class="disclaimer">APIR LAZ0022AU</p>
 													</td>
 												</tr>
-											</table>										
+											</table>
 											<br>
 			
 											<a href="https://lazard.com" class="btn text ">See all highlights <span>&#8594;</span></a>
@@ -399,7 +407,7 @@
 					</table>
 				</td>
 			</tr>
-
+			
 			<!-- CTA Banner (2) -->
 			<tr>
 				<td align="center">
