--- a/src/templates/fixed-income-viewpoint.html
+++ b/src/templates/fixed-income-viewpoint.html
@@ -12,47 +12,31 @@
 			<!-- Logo Banner -->
 			<tr>
 				<td align="center">			
-					<!--
-						Module: logo-banner
-						Variant: parchment
-					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
-						<tr>
-							<td class="frame"></td>
-							<td class="content">
-								<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Logo_Transparent.png" alt="Lazard Asset Management Logo" height="36">
-							</td>
-							<td class="frame"></td>
-						</tr>
-					</table>
+					@@include( "modules/logo-banners/templates/template.html", {
+						variant: "parchment",
+						imgSrc: "LAM_Logo_Transparent.png"
+					} )
 				</td>
 			</tr>
+			<!-- END Logo Banner -->
 
-			<!-- Email Banner -->
+			<!-- Email Banner, One Column -->
 			<tr>
 				<td align="center">
-					<!--
-						Module: Email Banner, One Column
-						Variant: parchment
-					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
-						<tr>
-							<td class="frame"></td>
-							<td class="content v-flush">
-								<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Banner_Industrial.png" alt="Banner Image" width="100%" height="auto">
-							</td>
-							<td class="frame"></td>
-						</tr>
-					</table>
+					@@include( "modules/email-banner/one-column/templates/template.html", {
+						variant: "parchment",
+						imgSrc: "LAM_Banner_Industrial.png"
+					} )
 				</td>
 			</tr>
+			<!-- END Email Banner, One Column -->
 
 			<!-- Email Heading -->
 			<tr>
 				<td align="center">
 					<!--
 						Module: Email Heading
-						Variant: parchment, sapphire buttons
+						Variant: parchment, onyx buttons
 					-->
 					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner parchment">
 						<tr>
@@ -66,16 +50,16 @@
 										<td class="column">
 											<!--
 												Component: Pill Button
-												Variant: Primary, Sapphire
+												Variant: Primary, Onyx
 											-->
 											<!--[if mso]>
 												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:65px;" 
-													fillcolor="#00539A">
+													fillcolor="#171A1C">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill @@variant">
+											<a target="_blank" href="https://lazard.com/" style="width: 65px;" class="btn pill onyx @@variant">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -91,8 +75,9 @@
 					</table>
 				</td>
 			</tr>
+			<!-- END Email Heading -->
 
-			<!-- Title Left -->
+			<!-- Two Column Content -->
 			<tr>
 				<td align="center">
 					<!--
@@ -110,7 +95,7 @@
 										</td>
 										<td class="column">
 											<p>Three months of higher-than-expected US inflation, growth, and Treasury yields have wreaked damage in bond markets around the world.</p>
-											<p>Can the recent easing in US inflation change the narrative and help them recover? Read our Fixed Income Team’s view.</p>
+											<p>Can the recent easing in US inflation change the narrative and help them recover? Read our Fixed Income Team's view.</p>
 										</td>
 									</tr>
 								</table>
@@ -120,6 +105,7 @@
 					</table>
 				</td>
 			</tr>
+			<!-- END Two Column Content -->
 
 			<!-- CTA Banner -->
 			<tr>
@@ -132,9 +118,9 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
-								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
+								<table style="width: 100%;" border="0" cellpadding="8px" cellspacing="0" role="presentation" class="layout_two-column_fluid">
 									<tr>
-										<td class="column">
+										<td class="column" width="100%">
 											<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 										</td>
 										<td class="column">
@@ -165,63 +151,11 @@
 					</table>
 				</td>
 			</tr>
+			<!-- END CTA Banner -->
 
 			<!-- Footer + Disclaimer -->
-			<tr>
-				<td align="center">
-					<!--
-						Module: Two Column Footer Disclaimer
-						Variant: Onyx
-					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark onyx">
-						<tr>
-							<td class="frame"></td>
-							<td class="content h-flush">
-								<table style="width: 100%;" cellpadding="8px" role="presentation">
-									<tr class="layout_mobile-one-column">
-										<td style="width: 65px;" class="column nowrap">
-											<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
-												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
-											</a>
-											&nbsp;&nbsp;
-											<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
-												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
-											</a>
-										</td>
-										<td class="column">
-											<p class="paragraph-2">Lazard Asset Management, 30 Rockefeller Plaza, New York, NY 10112-6300</p>
-											<br>
-											<p class="paragraph-2">For more information on Lazard Asset Management's capabilities,</p>
-											<p class="paragraph-2 margin-b-48">visit <a href="lazardassetmanagement.com" class="paragraph-2">lazardassetmanagement.com</a>.</p>
-			
-											<p class="paragraph-3">1 The investment team's research covers the time period from January 1,1998 to December 31, 2022.</p>
-											<p class="paragraph-3">2 As measured by cash flow return on investment or return on equity.</p>
-											<br>
-											<p class="paragraph-2">FOR FINANCIAL PROFESSIONAL USE ONLY. NOT FOR PUBLIC DISTRIBUTION.</p>
-											<br>
-											<table style="width: 100%;" role="presentation">
-												<tr class="layout_two-column">
-													<td style class="column padding-r-16">
-														<p class="paragraph-3">Information and opinions presented have been obtained or derived from sources believed by Lazard to be reliable. Lazard makes no representation as to their accuracy or completeness. All opinions expressed herein are subject to change. The S&P 500 Index is a market capitalization-weighted index of 500 companies in leading industries of the US economy. The MSCI Emerging Markets Index is a free-float-adjusted market capitalization index that is designed to measure equity market performance in the global emerging markets. The MSCI Emerging Markets Index consists of emerging markets country indices including: Brazil, Chile, China, Colombia, Czech Republic, Egypt, Greece, Hungary, India, Indonesia, Korea, Malaysia, Mexico, Peru, Philippines, Poland, Qatar, Saudi Arabia, South Africa, Taiwan, Thailand, Turkey, and United Arab Emirates. The index is unmanaged and has no fees. One cannot invest directly in an index. The MSCI World Index is a free-float-adjusted market capitalization index that is designed to measure global developed market equity performance comprised of developed market country indices. </p>
-													</td>
-													<td class="column">
-														<p class="paragraph-3">The index is unmanaged and has no fees. One cannot invest directly in an index.Certain information included herein is derived by Lazard in part from an MSCI index or indices (the “Index Data”). However, MSCI has not reviewed this product or report, and does not endorse or express any opinion regarding this product or report or any analysis or other information contained herein or the author or source of any such information or analysis. MSCI makes no express or implied warranties or representations and shall have no liability whatsoever with respect to any Index Data or data derived therefrom.</p>
-														<br>
-														<p class="paragraph-3">Read our Privacy Notice for information about how we use personal data that we hold on you</p>
-														<br>
-														<p class="paragraph-3">To unsubscribe from future emails or customize our communications with you, manage your email preferences.</p>
-													</td>
-												</tr>
-											</table>
-										</td>
-									</tr>
-								</table>
-							</td>
-							<td class="frame"></td>
-						</tr>
-					</table>
-				</td>
-			</tr>
+			@@include( "modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html" )
+			<!-- END Footer + Disclaimer -->
 		</table>
 	</body>
 </html>
