Fixed MSO dpi scaling issues

--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -1,5 +1,4 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office">
-<html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta charset="UTF-8">
@@ -7,13 +6,14 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../index.css">
 
-		<!--[if gte mso 9]>
-		<xml>
-		<o:OfficeDocumentSettings>
-		<o:AllowPNG/>
-		<o:PixelsPerInch>96</o:PixelsPerInch>
-		</o:OfficeDocumentSettings>
-		</xml>
+		<!--[if mso]>
+		<noscript>
+			<xml>
+				<o:OfficeDocumentSettings>
+					<o:PixelsPerInch>96</o:PixelsPerInch>
+				</o:OfficeDocumentSettings>
+			</xml>
+		</noscript>
 		<![endif]-->
 	</head>
 	<body align="center">
