--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../index.css">
+
+		<!--[if mso]>
+		<noscript>
+			<xml>
+				<o:OfficeDocumentSettings>
+					<o:PixelsPerInch>96</o:PixelsPerInch>
+				</o:OfficeDocumentSettings>
+			</xml>
+		</noscript>
+		<![endif]-->
 	</head>
 	<body align="center">
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
@@ -467,14 +477,15 @@
 								<table style width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 									<tr class="bordered">
 										<td class="table-thumbnail" align="right">
-											<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+											<!-- <img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail"> -->
+											<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 										</td>
 										<td>
 											<h4>Annual Sustainable <br> Investment Report</h4>
 											<br>
 											<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 											<br>
-											<a target="_blank" href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+											<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
 										</td>
 									</tr>
 								</table>
@@ -581,7 +592,8 @@
 								<br>
 								<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 								<br>
-								<img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100">
+								<!-- <img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100" /> -->
+								<img src="https://placehold.co/543x304" alt="Feature Image" width="100%" height="auto">
 								<p></p> <!-- Spacer <p> for MSO image margin -->
 								<br>
 								<p class="disclaimer">
@@ -642,61 +654,7 @@
 			</tr>
 
 			<!-- Footer + Disclaimer -->
-			<tr>
-				<td align="center">
-					<!--
-						Module: Two Column Footer Disclaimer
-						Variant: Onyx
-					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark onyx">
-						<tr>
-							<td class="frame"></td>
-							<td class="content h-flush">
-								<table style="width: 100%;" cellpadding="8px" role="presentation">
-									<tr class="layout_mobile-one-column">
-										<td style="width: 65px;" class="column nowrap">
-											<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
-												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
-											</a>
-											&nbsp;&nbsp;
-											<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
-												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
-											</a>
-										</td>
-										<td class="column">
-											<p class="paragraph-2">Lazard Asset Management, 30 Rockefeller Plaza, New York, NY 10112-6300</p>
-											<br>
-											<p class="paragraph-2">For more information on Lazard Asset Management's capabilities,</p>
-											<p class="paragraph-2 margin-b-48">visit <a href="lazardassetmanagement.com" class="paragraph-2">lazardassetmanagement.com</a>.</p>
-			
-											<p class="paragraph-3">1 The investment team's research covers the time period from January 1,1998 to December 31, 2022.</p>
-											<p class="paragraph-3">2 As measured by cash flow return on investment or return on equity.</p>
-											<br>
-											<p class="paragraph-2">FOR FINANCIAL PROFESSIONAL USE ONLY. NOT FOR PUBLIC DISTRIBUTION.</p>
-											<br>
-											<table style="width: 100%;" role="presentation">
-												<tr class="layout_two-column">
-													<td style class="column padding-r-16">
-														<p class="paragraph-3">Information and opinions presented have been obtained or derived from sources believed by Lazard to be reliable. Lazard makes no representation as to their accuracy or completeness. All opinions expressed herein are subject to change. The S&P 500 Index is a market capitalization-weighted index of 500 companies in leading industries of the US economy. The MSCI Emerging Markets Index is a free-float-adjusted market capitalization index that is designed to measure equity market performance in the global emerging markets. The MSCI Emerging Markets Index consists of emerging markets country indices including: Brazil, Chile, China, Colombia, Czech Republic, Egypt, Greece, Hungary, India, Indonesia, Korea, Malaysia, Mexico, Peru, Philippines, Poland, Qatar, Saudi Arabia, South Africa, Taiwan, Thailand, Turkey, and United Arab Emirates. The index is unmanaged and has no fees. One cannot invest directly in an index. The MSCI World Index is a free-float-adjusted market capitalization index that is designed to measure global developed market equity performance comprised of developed market country indices. </p>
-													</td>
-													<td class="column">
-														<p class="paragraph-3">The index is unmanaged and has no fees. One cannot invest directly in an index.Certain information included herein is derived by Lazard in part from an MSCI index or indices (the “Index Data”). However, MSCI has not reviewed this product or report, and does not endorse or express any opinion regarding this product or report or any analysis or other information contained herein or the author or source of any such information or analysis. MSCI makes no express or implied warranties or representations and shall have no liability whatsoever with respect to any Index Data or data derived therefrom.</p>
-														<br>
-														<p class="paragraph-3">Read our Privacy Notice for information about how we use personal data that we hold on you</p>
-														<br>
-														<p class="paragraph-3">To unsubscribe from future emails or customize our communications with you, manage your email preferences.</p>
-													</td>
-												</tr>
-											</table>
-										</td>
-									</tr>
-								</table>
-							</td>
-							<td class="frame"></td>
-						</tr>
-					</table>
-				</td>
-			</tr>
+			@@include( "modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html" )
 		</table>
 	</body>
 </html>
