Color changes, and headline updates

--- a/src/components/components.html
+++ b/src/components/components.html
@@ -7,7 +7,7 @@
 					<table cellpadding="8px" width="100%" role="presentation">
 
 						<tr>
-							<td align="center" id="Headlines">
+							<td align="center" id="Headlines" colspan="2">
 								<h4 style="margin: 16px;">Headlines</h4>
 							</td>
 						</tr>
@@ -22,10 +22,20 @@
 								<br>
 								<h4>Headline 4</h4>
 							</td>
+
+							<td>
+								<h1 class="sans">Headline 1</h1>
+								<br>
+								<h2 class="sans">Headline 2</h2>
+								<br>
+								<h3 class="sans">Headline 3</h3>
+								<br>
+								<h4 class="sans">Headline 4</h4>
+							</td>
 						</tr>
 
 						<tr>
-							<td align="center">
+							<td align="center" colspan="2">
 								<h4 style="margin: 16px;">Subheadlines</h4>
 							</td>
 						</tr>
@@ -41,7 +51,7 @@
 						</tr>
 
 						<tr>
-							<td align="center">
+							<td align="center" colspan="2">
 								<h4 style="margin: 16px;">Paragraphs</h4>
 							</td>
 						</tr>
@@ -57,7 +67,7 @@
 						</tr>
 
 						<tr>
-							<td align="center">
+							<td align="center" colspan="2">
 								<h4 style="margin: 16px;">Disclaimer/Caption</h4>
 							</td>
 						</tr>
@@ -69,7 +79,7 @@
 						</tr>
 
 						<tr>
-							<td align="center">
+							<td align="center" colspan="2">
 								<h4 style="margin: 16px;">Links</h4>
 							</td>
 						</tr>
@@ -83,7 +93,7 @@
 						</tr>
 
 						<tr>
-							<td align="center" id="eyebrows">
+							<td align="center" id="eyebrows" colspan="2">
 								<h4 style="margin: 16px;">Eyebrows</h4>
 							</td>
 						</tr>
@@ -107,7 +117,7 @@
 						</tr>
 
 						<tr>
-							<td align="center" id="buttons">
+							<td align="center" id="buttons" colspan="2">
 								<h4 style="margin: 16px;">Buttons</h4>
 							</td>
 						</tr>
