--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,34 +53,39 @@ table tr td {
 	vertical-align: top;
 }
 
-/* ul {
+ul {
 	margin: 0;
 	padding: 0;
 	line-height: 160%;
 	font-weight: 400;
 	font-size: 12px;
-
-	mso-margin-alt: 0px;
-	mso-padding-alt: 0px;
 }
 
 li {
 	padding-bottom: 8px;
 	padding-left: 0px;
 	margin-left: 0px; 
-
-  mso-margin-left-alt: 0px;
-	mso-padding-alt: 0px;
 }
 
 li a {
 	font-size: 12px;
 }
 
-li::marker {
-	color: var(--sapphire);
+li::marker 
+{
 	font-size: 16px;
-} */
+}
+
+li.link::marker {
+	color: var(--sapphire);
+}
+
+/* Gmail Webapp list styles */
+u + .body .glist { margin-left: 0 !important; }
+  
+@media only screen and (max-width: 640px) {
+  u + .body .glist { margin-left: 25px !important; }
+}
 
 .list-item {
 	vertical-align: middle;
