Fixed lists for mso and gmail

--- a/src/components/components.html
+++ b/src/components/components.html
@@ -117,6 +117,38 @@
 						</tr>
 
 						<tr>
+							<td align="center" id="lists" colspan="2">
+								<h4 style="margin: 16px;">Lists</h4>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								<div class="mso_list">
+									<ul class="g_list" style="" align="left" type="disc">
+											<li>Outlook on Emerging Markets</li>
+											<li>Outlook on Europe</li>
+											<li>Outlook on Japan</li>
+											<li>Outlook on the United Kingdom</li>
+									</ul>
+								</div>
+								<br>
+							</td>
+
+							<td>
+								<div class="mso_list">
+									<ul class="g_list" style="" align="left" type="disc">
+											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Emerging Markets</a></li>
+											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Europe</a></li>
+											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Japan</a></li>
+											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on the United Kingdom</a></li>
+									</ul>
+								</div>
+								<br>
+							</td>
+						</tr>
+
+						<tr>
 							<td align="center" id="buttons" colspan="2">
 								<h4 style="margin: 16px;">Buttons</h4>
 							</td>
