--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -14,14 +14,16 @@
 				</o:OfficeDocumentSettings>
 			</xml>
 		</noscript>
+		<![endif]-->
 
+		<!--[if (gte mso 9)|(IE)]>
 		<style>
 			li {
-				margin-left:27px !important;
-				mso-special-format: bullet;
+			margin-left:27px !important;
+			mso-special-format: bullet;
 			}
-			.mso_lt_9 {
-				margin-left: -25px !important;
+			.mso_list {
+			margin-left: -25px !important;
 			}
 		</style>
 		<![endif]-->
@@ -60,20 +62,16 @@
 								<br>
 								<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 								<br>
-			
-								<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on Emerging Markets</a></p>
-								<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on Europe</a></p>
-								<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on Japan</a></p>
-								<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on the United Kingdom</a></p>
-								<br>
 
-								<div class="mso_lt_9">
-									<ul class="glist" style="" align="left" type="disc">
+								<div class="mso_list">
+									<ul class="g_list" style="" align="left" type="disc">
 											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Emerging Markets</a></li>
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Emerging Markets</a></li>
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Emerging Markets</a></li>
+											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Europe</a></li>
+											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Japan</a></li>
+											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on the United Kingdom</a></li>
 									</ul>
 								</div>
+								<br>
 			
 								<!--
 									Component: Button
