--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -7,15 +7,7 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../index.css">
 
-		<!--[if mso]>
-		<noscript>
-			<xml>
-				<o:OfficeDocumentSettings>
-					<o:PixelsPerInch>96</o:PixelsPerInch>
-				</o:OfficeDocumentSettings>
-			</xml>
-		</noscript>
-		<![endif]-->
+		@@include( "includes/msoDependencies.html" )
 	</head>
 	<body align="center">
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
