--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -27,15 +27,7 @@
 			}
 		</style>
 
-		<!--[if mso]>
-		<noscript>
-			<xml>
-				<o:OfficeDocumentSettings>
-					<o:PixelsPerInch>96</o:PixelsPerInch>
-				</o:OfficeDocumentSettings>
-			</xml>
-		</noscript>
-		<![endif]-->
+		@@include( "includes/msoDependencies.html" )
 	</head>
 	<body align="center">
 
